--- a/HomePage.html
+++ b/HomePage.html
@@ -50,6 +50,16 @@
                         <li class="nav-item dropdown"> <a class="nav-link toggle catogary" href="Contact.html"  role="button"  aria-haspopup="true" aria-expanded="false"> <strong>Liên hệ</strong> </a>
                         </li>
                     </ul>
+                    <form class="navbar-form navbar-right" role="search">
+                     <div class="form-group input-group">
+                       <input type="text" class="form-control" placeholder="Search..">
+                       <span class="input-group-btn">
+                         <button class="btn btn-default" type="button">
+                           <span class="glyphicon glyphicon-search"><i class="fas fa-search"></i></span>
+                         </button>
+                       </span>        
+                     </div>
+                   </form>
                 </div>
             </nav>
             </div>
