--- a/News.html
+++ b/News.html
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                     <div class="show_blockdefault"> 
-                    <h3 class="title">Một Số Hình Ảnh Quán</h3>
+                    <h3 class="title" style="color: black;">Một Số Hình Ảnh Quán</h3>
                     <div class="showbody">
                         <div class="banner_list">
                             <div class="item">
