--- a/page2.html
+++ b/page2.html
@@ -62,7 +62,7 @@
                 <!-- Blog entries-->
                 <div class="col-lg-8">
                     <!-- Featured blog post-->
-                    <div class="card mb-4">
+                    <div class="card itial mb-4">
                         <a href="./pagecon7.html"><img class="card-img-top" src="./image/xudai.jpg" alt="..." style="height:350px;" />
                         <div class="card-body">
                             <div class="small text-muted">Ngày 1 tháng 12 năm 2021</div>
@@ -75,7 +75,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <!-- Blog post-->
-                            <div class="card mb-4">
+                            <div class="card itial mb-4">
                                 <a href="./pagecon1.html"><img height="200px" class="card-img-top" src="./image/trasuangonnhat.jpg" alt="..." />
                                 <div class="card-body">
                                     <div class="small text-muted">ngày 2 tháng 12 năm 2021</div>
@@ -85,7 +85,7 @@
                                 </div>
                             </div>
                             <!-- Blog post-->
-                            <div class="card mb-4">
+                            <div class="card itial mb-4">
                                 <a href="./pagecon8.html"><img height="200px" class="card-img-top" src="./image/blogcon3.png" alt="..." />
                                 <div class="card-body">
                                     <div class="small text-muted">ngày 1 tháng 12 năm 2021</div>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="col-lg-6">
                             <!-- Blog post-->
-                            <div class="card mb-4">
+                            <div class="card itial mb-4">
                                 <a href="./pagecon9.html"><img height="200px" class="card-img-top" src="./image/tuongdongian.png" alt="..." />
                                 <div class="card-body">
                                     <div class="small text-muted">ngày 1 tháng 12 năm 2021</div>
@@ -107,7 +107,7 @@
                                 </div>
                             </div>
                             <!-- Blog post-->
-                            <div class="card mb-4">
+                            <div class="card itial mb-4">
                                 <a href="./pagecon10.html"><img height="200px;" class="card-img-top" src="./image/hot.jpg" alt="..." />
                                 <div class="card-body">
                                     <div class="small text-muted">ngày 20 tháng 12 năm 2021</div>
