--- a/HomePage.html
+++ b/HomePage.html
@@ -96,21 +96,21 @@
                   <img src="https://phuclong.com.vn/uploads/category/3b155b94c2c766-192057614x.jpg" alt="Los Angeles" width="100%" height="300px">
                   <div class="carousel-caption">
                     <h3>Combo</h3>
-                <button class="snip1582">Đặt Mua</button>
+                <button class="snip1582">Chi Tiết</button>
                   </div>   
                 </div>
                 <div class="carousel-item">
                   <img src="https://phuclong.com.vn/uploads/banner/59d303d3b836b9-ecpremium3_1920x576.jpg" alt="Chicago" width="100%" height="300px">
                   <div class="carousel-caption">
                     <h3>Hot Cake</h3>
-                <button class="snip1582">Đặt Mua</button>
+                <button class="snip1582">Chi Tiết</button>
                   </div>   
                 </div>
                 <div class="carousel-item">
                   <img src="https://phuclong.com.vn/uploads/banner/1382de28347667-ec3chai2_1920x576.jpg" alt="New York" width="100%" height="300px">
                   <div class="carousel-caption">
                     <h3>Hot Cake</h3>
-                <button class="snip1582">Đặt Mua</button>
+                <button class="snip1582">Chi Tiết</button>
                   </div>   
                 </div>
               </div>
@@ -135,21 +135,21 @@
       <img src="https://phuclong.com.vn/uploads/category/3b155b94c2c766-192057614x.jpg" alt="Los Angeles" width="100%" height="500px">
       <div class="carousel-caption">
         <h3>BestCombo<h3>
-                <button class="snip1582">Đặt Mua</button>
+                <button class="snip1582">Chi Tiết</button>
       </div>   
     </div>
     <div class="carousel-item">
       <img src="https://phuclong.com.vn/uploads/banner/59d303d3b836b9-ecpremium3_1920x576.jpg" alt="Chicago" width="100%" height="500px">
       <div class="carousel-caption">
         <h3>TopSeller</h3>
-                <button class="snip1582">Đặt Mua</button>
+                <button class="snip1582">Chi Tiết</button>
       </div>   
     </div>
     <div class="carousel-item">
       <img src="https://phuclong.com.vn/uploads/banner/1382de28347667-ec3chai2_1920x576.jpg" alt="New York" width="100%" height="500px">
       <div class="carousel-caption">
         <h3>TopSeller</h3>
-                <button class="snip1582">Đặt Mua</button>
+                <button class="snip1582">Chi Tiết</button>
       </div>   
     </div>
   </div>
@@ -229,7 +229,7 @@
                      </span>
                      <p>37.000đ</p>
                     
-				     <a href="./Productdetail.html"> <button class="snip1582">Đặt Mua</button></a>
+				     <a href="./Productdetail.html"> <button class="snip1582">Chi Tiết</button></a>
                </div>
             </div>
                 </div>
@@ -246,7 +246,7 @@
                         +22%
                      </span>
                      <p>58.000đ</p>
-                   <a href="./Productdetail.html"> <button class="snip1582">Đặt Mua</button></a>
+                   <a href="./Productdetail.html"> <button class="snip1582">Chi Tiết</button></a>
                </div>
             </div>
                 </div>
@@ -263,7 +263,7 @@
                            +32%
                         </span>
                         <p>58.462đ</p>
-                       <button  class="snip1582">Đặt Mua</button>
+                       <button  class="snip1582">Chi Tiết</button>
                   </div>
                </div>
                 </div>
@@ -280,7 +280,7 @@
                            +12%
                         </span>
                         <p>48.423đ</p>
-                       <button class="snip1582">Đặt Mua</button>
+                       <button class="snip1582">Chi Tiết</button>
                   </div>
                </div>
                 </div>
@@ -297,7 +297,7 @@
                            +25%
                         </span>
                         <p>45.342đ</p>
-                       <button class="snip1582">Đặt Mua</button>
+                       <button class="snip1582">Chi Tiết</button>
                   </div>
                </div>
                 </div>
@@ -314,7 +314,7 @@
                            +12%
                         </span>
                         <p>47.323đ</p>
-                       <button class="snip1582">Đặt Mua</button>
+                       <button class="snip1582">Chi Tiết</button>
                   </div>
                </div>
                 </div>
