--- a/HomePage.html
+++ b/HomePage.html
@@ -409,7 +409,7 @@
                   <div class="card-body">
                      <div class="small text-muted">January 1, 2021</div>
                      <h2 class="card-title h4">Một số thực phẩm không dùng chung với sữa</h2>
-                     <p class="card-text">Sữa chứa nhiều chất dinh dưỡng như canxi, magiê, đạm... rất có lợi cho cơ thể con người. Tuy nhiên, một số thực phẩm không hích hợp khi dùng với sữa vì nó khiến chất dinh dưỡng trong...</p>
+                     <p class="card-text">Sữa chứa nhiều chất dinh dưỡng như canxi, magiê, đạm... rất có lợi cho cơ thể con người. Tuy nhiên, một số thực phẩm không hích hợp khi dùng với sữa vì nó khiến chất dinh dưỡng trong  sữa mất đi một cách đáng tiếc, thậm chí còn phản tác dụng...</p>
                      </a>
                   </div>
                </div>
