--- a/HomePage.html
+++ b/HomePage.html
@@ -222,12 +222,12 @@
                      <div class="card-body">
                      <h4><b>Ngọc Viễn Đông</b></h4>
                      <span class="price product-price-old">
-                        29.000đ
+                        39.000đ
                      </span>
                      <span class="sale_count">
                         -22%
                      </span>
-                     <p>37.000đ</p>
+                     <p>17.000đ</p>
                     
 				     <a href="./Productdetail.html"> <button class="snip1582">Chi Tiết</button></a>
                </div>
@@ -240,12 +240,12 @@
                      <div class="card-body">
                      <h4><b>Bánh Oreo Xay Cùng Cà Phê</b></h4>
                      <span class="price product-price-old">
-                        29.000đ
+                        55.000đ
                      </span>
                      <span class="sale_count">
-                        +22%
+                        -22%
                      </span>
-                     <p>58.000đ</p>
+                     <p>28.000đ</p>
                    <a href="./Productdetail.html"> <button class="snip1582">Chi Tiết</button></a>
                </div>
             </div>
@@ -257,12 +257,12 @@
                         <div class="card-body">
                         <h4><b>Trà Đá Xay</b></h4>
                         <span class="price product-price-old">
-                           29.000đ
+                           59.000đ
                         </span>
                         <span class="sale_count">
-                           +32%
+                           -12%
                         </span>
-                        <p>58.462đ</p>
+                        <p>28.462đ</p>
                        <button  class="snip1582">Chi Tiết</button>
                   </div>
                </div>
@@ -274,12 +274,12 @@
                         <div class="card-body">
                         <h4><b>Táo Và Dâu Ép</b></h4>
                         <span class="price product-price-old">
-                           29.000đ
+                           49.000đ
                         </span>
                         <span class="sale_count">
-                           +12%
+                           -12%
                         </span>
-                        <p>48.423đ</p>
+                        <p>38.423đ</p>
                        <button class="snip1582">Chi Tiết</button>
                   </div>
                </div>
@@ -291,12 +291,12 @@
                         <div class="card-body">
                         <h4><b>Dâu Ép</b></h4>
                         <span class="price product-price-old">
-                           29.000đ
+                           49.000đ
                         </span>
                         <span class="sale_count">
-                           +25%
+                           -50%
                         </span>
-                        <p>45.342đ</p>
+                        <p>25.342đ</p>
                        <button class="snip1582">Chi Tiết</button>
                   </div>
                </div>
@@ -308,12 +308,12 @@
                         <div class="card-body">
                         <h4><b>Bưởi Ép</b></h4>
                         <span class="price product-price-old">
-                           29.000đ
+                           49.000đ
                         </span>
                         <span class="sale_count">
-                           +12%
+                           -12%
                         </span>
-                        <p>47.323đ</p>
+                        <p>27.323đ</p>
                        <button class="snip1582">Chi Tiết</button>
                   </div>
                </div>
@@ -409,7 +409,7 @@
                   <div class="card-body">
                      <div class="small text-muted">January 1, 2021</div>
                      <h2 class="card-title h4">Một số thực phẩm không dùng chung với sữa</h2>
-                     <p class="card-text">Sữa chứa nhiều chất dinh dưỡng như canxi, magiê, đạm... rất có lợi cho cơ thể con người. Tuy nhiên, một số thực phẩm không hích hợp khi dùng với sữa vì nó khiến chất dinh dưỡng trong  sữa mất đi một cách đáng tiếc, thậm chí còn phản tác dụng...</p>
+                     <p class="card-text">Sữa chứa nhiều chất dinh dưỡng như canxi, magiê, đạm... rất có lợi cho cơ thể con người. Tuy nhiên, một số thực phẩm không hích hợp khi dùng với sữa vì nó khiến chất dinh dưỡng trong...</p>
                      </a>
                   </div>
                </div>
